--- a/css/wf4jdr4e-fr.css
+++ b/css/wf4jdr4e-fr.css
@@ -203,11 +203,11 @@
   text-align: center;
 }
 
-/* Styles limited to boilerplate sheets */
-.boilerplate .item-form {
+/* Styles limited to wf4jdr4e-fr sheets */
+.wf4jdr4e-fr .item-form {
   font-family: "Roboto", sans-serif;
 }
-.boilerplate .sheet-header {
+.wf4jdr4e-fr .sheet-header {
   flex: 0 auto;
   overflow: hidden;
   display: flex;
@@ -216,43 +216,43 @@
   justify-content: flex-start;
   margin-bottom: 10px;
 }
-.boilerplate .sheet-header .profile-img {
+.wf4jdr4e-fr .sheet-header .profile-img {
   flex: 0 0 100px;
   height: 100px;
   margin-right: 10px;
 }
-.boilerplate .sheet-header .header-fields {
+.wf4jdr4e-fr .sheet-header .header-fields {
   flex: 1;
 }
-.boilerplate .sheet-header h1.charname {
+.wf4jdr4e-fr .sheet-header h1.charname {
   height: 50px;
   padding: 0px;
   margin: 5px 0;
   border-bottom: 0;
 }
-.boilerplate .sheet-header h1.charname input {
+.wf4jdr4e-fr .sheet-header h1.charname input {
   width: 100%;
   height: 100%;
   margin: 0;
 }
-.boilerplate .sheet-tabs {
+.wf4jdr4e-fr .sheet-tabs {
   flex: 0;
 }
-.boilerplate .sheet-body,
-.boilerplate .sheet-body .tab,
-.boilerplate .sheet-body .tab .editor {
+.wf4jdr4e-fr .sheet-body,
+.wf4jdr4e-fr .sheet-body .tab,
+.wf4jdr4e-fr .sheet-body .tab .editor {
   height: 100%;
 }
-.boilerplate .tox .tox-editor-container {
+.wf4jdr4e-fr .tox .tox-editor-container {
   background: #fff;
 }
-.boilerplate .tox .tox-edit-area {
+.wf4jdr4e-fr .tox .tox-edit-area {
   padding: 0 8px;
 }
-.boilerplate .resource-label {
+.wf4jdr4e-fr .resource-label {
   font-weight: bold;
 }
-.boilerplate .items-header {
+.wf4jdr4e-fr .items-header {
   height: 28px;
   margin: 2px 0;
   padding: 0;
@@ -261,17 +261,17 @@
   border: 2px groove #eeede0;
   font-weight: bold;
 }
-.boilerplate .items-header > * {
+.wf4jdr4e-fr .items-header > * {
   font-size: 14px;
   text-align: center;
 }
-.boilerplate .items-header .item-name {
+.wf4jdr4e-fr .items-header .item-name {
   font-weight: bold;
   padding-left: 5px;
   text-align: left;
   display: flex;
 }
-.boilerplate .items-list {
+.wf4jdr4e-fr .items-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -279,12 +279,12 @@
   scrollbar-width: thin;
   color: #444;
 }
-.boilerplate .items-list .item-list {
+.wf4jdr4e-fr .items-list .item-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.boilerplate .items-list .item-name {
+.wf4jdr4e-fr .items-list .item-name {
   flex: 2;
   margin: 0;
   overflow: hidden;
@@ -293,46 +293,46 @@
   align-items: center;
   display: flex;
 }
-.boilerplate .items-list .item-name h3, .boilerplate .items-list .item-name h4 {
+.wf4jdr4e-fr .items-list .item-name h3, .wf4jdr4e-fr .items-list .item-name h4 {
   margin: 0;
   white-space: nowrap;
   overflow-x: hidden;
 }
-.boilerplate .items-list .item-controls {
+.wf4jdr4e-fr .items-list .item-controls {
   display: flex;
   flex: 0 0 100px;
   justify-content: flex-end;
 }
-.boilerplate .items-list .item-controls a {
+.wf4jdr4e-fr .items-list .item-controls a {
   font-size: 12px;
   text-align: center;
   margin: 0 6px;
 }
-.boilerplate .items-list .item {
+.wf4jdr4e-fr .items-list .item {
   align-items: center;
   padding: 0 2px;
   border-bottom: 1px solid #c9c7b8;
 }
-.boilerplate .items-list .item:last-child {
+.wf4jdr4e-fr .items-list .item:last-child {
   border-bottom: none;
 }
-.boilerplate .items-list .item .item-name {
+.wf4jdr4e-fr .items-list .item .item-name {
   color: #191813;
 }
-.boilerplate .items-list .item .item-name .item-image {
+.wf4jdr4e-fr .items-list .item .item-name .item-image {
   flex: 0 0 30px;
   height: 30px;
   background-size: 30px;
   border: none;
   margin-right: 5px;
 }
-.boilerplate .items-list .item-prop {
+.wf4jdr4e-fr .items-list .item-prop {
   text-align: center;
   border-left: 1px solid #c9c7b8;
   border-right: 1px solid #c9c7b8;
   font-size: 12px;
 }
-.boilerplate .items-list .items-header {
+.wf4jdr4e-fr .items-list .items-header {
   height: 28px;
   margin: 2px 0;
   padding: 0;
@@ -341,26 +341,28 @@
   border: 2px groove #eeede0;
   font-weight: bold;
 }
-.boilerplate .items-list .items-header > * {
+.wf4jdr4e-fr .items-list .items-header > * {
   font-size: 12px;
   text-align: center;
 }
-.boilerplate .items-list .items-header .item-name {
+.wf4jdr4e-fr .items-list .items-header .item-name {
   padding-left: 5px;
   text-align: left;
 }
-.boilerplate .item-formula {
+.wf4jdr4e-fr .item-formula {
   flex: 0 0 200px;
   padding: 0 8px;
 }
-.boilerplate .effects .item .effect-source,
-.boilerplate .effects .item .effect-duration,
-.boilerplate .effects .item .effect-controls {
+.wf4jdr4e-fr .effects .item .effect-source,
+.wf4jdr4e-fr .effects .item .effect-duration,
+.wf4jdr4e-fr .effects .item .effect-controls {
   text-align: center;
   border-left: 1px solid #c9c7b8;
   border-right: 1px solid #c9c7b8;
   font-size: 12px;
 }
-.boilerplate .effects .item .effect-controls {
+.wf4jdr4e-fr .effects .item .effect-controls {
   border: none;
 }
+
+/*# sourceMappingURL=wf4jdr4e-fr.css.map */
