--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,10 +1,15 @@
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
 .item-form {
   font-family: $font-primary;
 }
 
 .sheet-header {
-  flex: 0 auto;
-  overflow: hidden;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -34,14 +39,45 @@
   }
 }
 
+.flex-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 8px;
+  > * {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .sheet-tabs {
   flex: 0;
 }
 
-.sheet-body,
-.sheet-body .tab,
-.sheet-body .tab .editor {
-  height: 100%;
+.sheet-body {
+  flex-grow: 1;
+
+  .editor {
+    height: 100%;
+  }
+}
+
+.sheet-footer {
+  max-height: 19px;
+  padding: 0;
+  margin: 0 0 -8px -8px;
+  display: flex;
+  width: calc(100% + 8px);
+  span {
+    flex-grow: 1;
+    max-height: 18px;
+    border-top: 1px solid $c-tan;
+    margin: 0;
+    padding: 0 8px;
+    font-size: 0.8em;
+    line-height: 18px;
+  }
 }
 
 .tox {
