--- a/templates/item/item-stuff_feature-sheet.hbs
+++ b/templates/item/item-stuff_feature-sheet.hbs
@@ -15,7 +15,7 @@
             placeholder="Name"
           /></h1>
       </div>
-      <div>
+      <div class="flex-form">
         <div class="resource">
           <label
             class="resource-label"
