--- a/templates/item/item-stuff_feature-sheet.hbs
+++ b/templates/item/item-stuff_feature-sheet.hbs
@@ -28,26 +28,28 @@
             <label
               class="resource-label"
               for="system.category"
-            >{{@root.config.displaykeys.category}}</label>
+            >{{displaykeys.category}}</label>
             <select
               name="system.category"
               data-dtype="String"
               class="resource-content"
+              id="category-select"
             >
-              {{selectOptions @root.config.stuffFeatureCategory selected=system.category localize=true}}
+              {{selectOptions config.stuffFeatureCategory selected=system.category localize=true}}
             </select>
           </div>
           <div class="resource">
             <label
               class="resource-label"
               for="system.division"
-            >{{@root.config.displaykeys.division}}</label>
+            >{{displaykeys.division}}</label>
             <select
               name="system.division"
               data-dtype="String"
               class="resource-content"
+              id="division-select"
             >
-              {{selectOptions @root.config.stuffFeatureDivision selected=system.division localize=true}}
+              {{selectOptions config.stuffFeatureDivision selected=system.division localize=true}}
             </select>
           </div>
           {{#unless (eq system.category "Group")}}
@@ -55,7 +57,7 @@
             <label
               class="resource-label"
               for="system.has_indice"
-            >{{@root.config.displaykeys.has_indice}}</label>
+            >{{displaykeys.has_indice}}</label>
             <input
               type="checkbox"
               name="system.has_indice"
@@ -67,11 +69,11 @@
           {{/unless}}
         {{else}}
           <p>{{localize
-              (lookup @root.config.stuffFeatureCategory system.category)
+              (lookup config.stuffFeatureCategory system.category)
             }}
             -
             {{localize
-              (lookup @root.config.stuffFeatureDivision system.division)
+              (lookup config.stuffFeatureDivision system.division)
             }}
           </p>
         {{/if}}
@@ -81,16 +83,10 @@
 
   {{! Sheet Body }}
   <section class="sheet-body">
-    {{editor
-      enrichedDescription
-      target="system.description"
-      engine="prosemirror"
-      button=true
-      editable=editable
-    }}
+    <div class="form-group">
+      <label for="description-editor">{{displaykeys.description}}</label>
+      <div id="description-editor" class="quill-editor"></div>
+      <input type="hidden" name="system.description" value="{{system.description}}" />
+    </div>
   </section>
-  <footer class="sheet-footer">
-    <span>{{@root.config.footerLabel}}</span>
-  </footer>
-
 </form>
